proto, ethernet init working

--- a/Firmware/FR_Split_Button_ESP32_Firmware_v2/platformio.ini
+++ b/Firmware/FR_Split_Button_ESP32_Firmware_v2/platformio.ini
@@ -9,6 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32-poe]
+src_dir = main
 platform = espressif32
 board = esp32-poe
 framework = espidf
